mdapi/Custom/objects/Property_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rehab_Budget_Est_UW__c</fullName>
        <inlineHelpText>This amount should reflect the Rehab Budget and required contingency amount.</inlineHelpText>
        <label>*Rehab Budget Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rehab_Contingency_Amount__c</fullName>
        <formula>Rehab_Budget_Est_UW__c - Rehab_Pre_Contingency_Budget__c</formula>
        <label>Rehab Contingency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rehab_Contingency_Percent__c</fullName>
        <formula>(Rehab_Budget_Est_UW__c - Rehab_Pre_Contingency_Budget__c) / Rehab_Pre_Contingency_Budget__c</formula>
        <label>Rehab Contingency %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rehab_Overhead__c</fullName>
        <description>Effective July 2014, Asset Mgmt. began rolling Acquisition Overhead, Initial Lease-Up Costs, and Rehab Overhead into Platform Build-Up Costs (or Allocation).  Therefore, all values in this field were changed to 0.00.  Refer to D-00013010 and its attached spreadsheet.</description>
        <formula>If(NOT(ISNULL(Acquisition_Basis_Est_UW__c)), 
(Acquisition_Basis_Est_UW__c + Title_Policy_Cost_Est_UW__c + Other_Closing_Costs_Est_UW__c + Initial_Lease_up_Cost_Est_UW__c + CFK_Est_UW__c)
*(CASE (Fund__c, &apos;01&apos;, 0.0000,&apos;02&apos;, 0.0000, &apos;03&apos;, 0.0000, &apos;04&apos;, 0.0000, 0.0000)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rehab Overhead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rehab_Pre_Contingency_Budget__c</fullName>
        <inlineHelpText>This field should reflect the original UW rehab budget with no contingency added.</inlineHelpText>
        <label>*Rehab Pre-Contingency Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rejected_from_Acquisition_Team_Manager__c</fullName>
        <label>Rejected from Acquisition Team Manager</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejected_from_Asset_Management_Team__c</fullName>
        <label>Rejected from Asset Management Team</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rent_Bump_Start_month_Lease_1__c</fullName>
        <label>Rent Bump Start (month) -Lease 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Bump_Start_month_Lease_2__c</fullName>
        <label>Rent Bump Start (month) -Lease 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Bump_Start_month_Lease_3__c</fullName>
        <label>Rent Bump Start (month) -Lease 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Inflation__c</fullName>
        <label>Rent Inflation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_Est_UW_OLD__c</fullName>
        <formula>Replacement_Cost_PSF_UW_OLD__c * Square_Feet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Cost Est @ UW OLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_Inflation__c</fullName>
        <label>Replacement Cost Inflation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_PSF_UW_OLD__c</fullName>
        <label>*Replacement Cost PSF UW Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_PSF_UW__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0, Replacement_Value_Est_UW__c/Square_Feet__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Cost PSF UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost_Structure_UW__c</fullName>
        <label>Replacement Cost of Structure @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Land_Value_UW__c</fullName>
        <label>Replacement Land Value @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Reserves__c</fullName>
        <label>Replacement Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Replacement_Value_Est_UW__c</fullName>
        <formula>Replacement_Cost_Structure_UW__c+Replacement_Land_Value_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement Value Est UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Date__c</fullName>
        <label>Reporting Date (Pending Approval)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reserve_Inflation__c</fullName>
        <label>Reserve Inflation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Residence_APN__c</fullName>
        <formula>Residence__r.APN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residence APN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residence</label>
        <referenceTo>Residence__c</referenceTo>
        <relationshipLabel>Pipeline</relationshipLabel>
        <relationshipName>Pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <formula>TEXT(Residence__r.Roof_Type__c)</formula>
        <label>Roof Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <formula>IF(
OR(
$RecordType.Name = &apos;Bulk Acquisition&apos;,
$RecordType.Name = &apos;Standard/REO Acquisition&apos;
),
(
DATE(
YEAR(Escrow_Expected_Close_Date__c) + (MONTH(Escrow_Expected_Close_Date__c) + Exit_Month__c)/12,
MOD((MONTH(Escrow_Expected_Close_Date__c) + Exit_Month__c + 1), 12),
1
)-1
),
(
DATE(
YEAR(DATEVALUE(CreatedDate)) + (MONTH(DATEVALUE(CreatedDate)) + Exit_Month__c)/12,
MOD((MONTH(DATEVALUE(CreatedDate)) + Exit_Month__c + 1), 12),
1
)
)-1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Price_PSF__c</fullName>
        <formula>IF ( Square_Feet__c &gt; 0, Sale_Price__c / Square_Feet__c,  null  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Price PSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <formula>((1+HPA_5_Year_CAGR__c)^ (Exit_Year__c) )*Market_Value_UW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School_District__c</fullName>
        <formula>Residence__r.School_District__c</formula>
        <label>School District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Text_APN_Search__c</fullName>
        <label>Search Text: APN Search</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Text_APN__c</fullName>
        <description>This field is auto-populated by a workflow rule from the Residence object to ensure that the APN reflected on the Pipeline record can be accessible via global search.</description>
        <label>Search Text: APN</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Text_Address__c</fullName>
        <label>Search Text: Address</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Costs_Percent__c</fullName>
        <label>Selling Costs %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Selling_Costs__c</fullName>
        <formula>Sale_Price__c * Selling_Costs_Percent__c*(-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Short_Sale_Approval_Date__c</fullName>
        <inlineHelpText>This field coincides with the &quot;Short Sale Lender Approved&quot; field.</inlineHelpText>
        <label>Short Sale Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Sale_Lender_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>See D-00013568.</description>
        <inlineHelpText>Indicates if the short sale contract was approved by the lender.</inlineHelpText>
        <label>Short Sale Lender Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spread__c</fullName>
        <label>Spread</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Square_Feet__c</fullName>
        <formula>Residence__r.Square_Feet__c</formula>
        <label>*Square Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>*Pipeline Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquired</fullName>
                </value>
                <value>
                    <fullName>Active - Bid Placed</fullName>
                </value>
                <value>
                    <fullName>Active - In Escrow</fullName>
                </value>
                <value>
                    <fullName>Dead - Bid Lost</fullName>
                </value>
                <value>
                    <fullName>Dead - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Dead  - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed - Bid Lost</fullName>
                </value>
                <value>
                    <fullName>Closed - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed  - Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <formula>Residence__r.Subdivision__c</formula>
        <label>Subdivision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <formula>IF(
AND(
TEXT(Region__c) != &apos;Inland Empire&apos;,
TEXT(Region__c) != &apos;Chicago&apos;,
TEXT(Region__c) != &apos;&apos;
),
&apos;&apos;,
IF(
AND(
TEXT(Region__c) == &apos;Inland Empire&apos;,
LOWER(Property_County__c) == LOWER(&apos;Orange County&apos;) || LOWER(Property_County__c) == LOWER(&apos;Orange&apos;) 
),
&apos;Orange County&apos;,
IF(
TEXT(Region__c) == &apos;Inland Empire&apos;,
&apos;Inland Empire&apos;,
IF(
TEXT(Region__c) == &apos;Chicago&apos;,
IF(
LOWER(Property_State__c) == LOWER(&apos;IL&apos;) ,
&apos;IL&apos; ,
IF(
LOWER(Property_State__c) == LOWER(&apos;MN&apos;),
&apos;MN&apos; ,
IF(
LOWER(Property_State__c) == LOWER(&apos;WI&apos;),
&apos;WI&apos;,
&apos;Other&apos;
)
)
),
&apos;&apos;
)
)
)
)</formula>
        <label>Subregion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Company_Txt__c</fullName>
        <label>Title Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>*Title Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pipeline (Title Company)</relationshipLabel>
        <relationshipName>TitleCompanyPipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title_Policy_Cost_Est_UW__c</fullName>
        <label>*Title Policy Cost Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PipelinesTransactionCoordinator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trustee_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trustee Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pipeline (Trustee Company)</relationshipLabel>
        <relationshipName>TrusteeCompanyPipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trustee_Due_from__c</fullName>
        <formula>IF((Trustee_Payment_to__c = null), null,
	(IF((Trustee_Payment_to__c =0),0 ,Trustee_Payment_to__c- Closing_Price__c ))
)</formula>
        <label>Trustee (Due from)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trustee_Form_of_Payment__c</fullName>
        <label>*Trustee Form of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Cashier&apos;s Check</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trustee_Payment_to__c</fullName>
        <label>*Trustee (Payment to)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trustee_text__c</fullName>
        <formula>AZB_Update__r.Trustee_Company__c</formula>
        <label>Trustee(text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriting_Notes__c</fullName>
        <inlineHelpText>Underwriting Notes will be visible only to the acquisition team and will not move with the property record post-acquisition.</inlineHelpText>
        <label>Underwriting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <formula>Residence__r.Address_Unit__c</formula>
        <inlineHelpText>This value comes from the Residence record.  If it&apos;s incorrect, make the change there.</inlineHelpText>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsuccessful_Bid_Reason__c</fullName>
        <label>Unsuccessful Bid Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IH Offer Withdrawn/Decline</fullName>
                </value>
                <value>
                    <fullName>Other buyer chosen for non-economic reasons</fullName>
                </value>
                <value>
                    <fullName>Outbid</fullName>
                </value>
                <value>
                    <fullName>Sale Postponed/Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <formula>IF( 
$Setup.View_Configuration__c.View_My_Records__c , 
IF(
OR(
$User.Id =  Acquisitions_Team_Manager__r.Id,
$User.Id = Submitted_By__r.Id,
$User.Id =  Acquisitions_Analyst__r.Id 
), 
&apos;true&apos;, 
&apos;false&apos;
), 
&apos;true&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12_Month_LIBOR__c</fullName>
        <label>12-Month LIBOR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <formula>Residence__r.Year_Built__c</formula>
        <label>*Year Built</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pipeline</label>
    <listViews>
        <fullName>AH4R_AH_LLC_LA_IE_SAC_149_2</fullName>
        <columns>NAME</columns>
        <columns>Residence__c</columns>
        <columns>Region__c</columns>
        <columns>Acquisition_Date__c</columns>
        <columns>Back_Taxes_Est_UW__c</columns>
        <columns>Liens_Fines_Est_UW__c</columns>
        <columns>Other_Closing_Costs_Est_UW__c</columns>
        <columns>Broker_Expense_Est_UW__c</columns>
        <columns>Occupied_Status_Acquisition__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Escrow_Expected_Close_Date__c</columns>
        <columns>Inspection_Period_End_Date__c</columns>
        <columns>Market_Value_UW__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bulk_Deal__c</field>
            <operation>equals</operation>
            <value>AH4R - AH LLC LA/IE/SAC 149</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Opportunity__c.Bulk</value>
        </filters>
        <label>AH4R - AH LLC LA/IE/SAC 149</label>
        <sharedTo>
            <group>Region_Inland_Empire</group>
            <group>Region_Los_Angeles</group>
            <group>Region_Sacramento</group>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AH4R_AH_LLC_LA_IE_SAC_38</fullName>
        <columns>NAME</columns>
        <columns>Residence__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Stage__c</columns>
        <columns>Contract_Price__c</columns>
        <columns>Escrow_Expected_Close_Date__c</columns>
        <columns>Acquisition_Date__c</columns>
        <columns>HOA_Options__c</columns>
        <columns>Market_Value_UW__c</columns>
        <columns>Title_Policy_Cost_Est_UW__c</columns>
        <columns>Other_Closing_Costs_Est_UW__c</columns>
        <columns>Replacement_Cost_PSF_UW_OLD__c</columns>
        <columns>Exp_Gross_Monthly_Rent_UW__c</columns>
        <columns>Monthly_HOA_UW__c</columns>
        <columns>Escrow_Opened_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bulk_Deal__c</field>
            <operation>equals</operation>
            <value>AH4R-AH LLC/LA/IE/SAC 38</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Opportunity__c.Bulk</value>
        </filters>
        <label>AH4R-AH LLC/LA/IE/SAC 38</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_Inland_Empire</role>
            <role>Executive_LA_County</role>
            <role>Executive_Sacramento</role>
            <role>Team_Member_Inland_Empire</role>
            <role>Team_Member_LA_County</role>
            <role>Team_Member_Sacramento</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AZBIDDER_Asset_Mgmt_Scrub</fullName>
        <columns>NAME</columns>
        <columns>Residence__c</columns>
        <columns>APN__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Acquisition_Date__c</columns>
        <columns>Reporting_Date__c</columns>
        <columns>Approved_from_Acquisition_Team_Manager__c</columns>
        <columns>Approved_from_Asset_Management_Team__c</columns>
        <columns>Pipeline_Add_Date__c</columns>
        <columns>IsConverted__c</columns>
        <columns>Acquisition_Reporting__c</columns>
        <columns>Acquisition_Reporting_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AZB_IH_Win_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Opportunity__c.AZ_Bidder</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Acquired,Active - Bid Placed</value>
        </filters>
        <label>AZBIDDER Asset Mgmt. Scrub</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_Atlanta</role>
            <role>Team_Member_Atlanta</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AZBIDDER_MR_Scrub</fullName>
        <columns>NAME</columns>
        <columns>Residence__c</columns>
        <columns>Subdivision__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Property_County__c</columns>
        <columns>Bedrooms__c</columns>
        <columns>Baths__c</columns>
        <columns>Contract_Price__c</columns>
        <columns>Rehab_Budget_Est_UW__c</columns>
        <columns>All_In_Cost_Est_UW__c</columns>
        <columns>Market_Value_UW__c</columns>
        <columns>All_In_Cost_Assumption_MKT_UW__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bid_Type__c</field>
            <operation>equals</operation>
            <value>Trustee</value>
        </filters>
        <filters>
            <field>AZB_IH_Win_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Opportunity__c.AZ_Bidder</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <label>AZBIDDER MV Scrub</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_Atlanta</role>
            <role>Team_Member_Atlanta</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AZBIDDER_MV_Scrub</fullName>
        <columns>NAME</columns>
        <columns>Residence__c</columns>
        <columns>Subdivision__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Property_County__c</columns>
        <columns>Bedrooms__c</columns>
        <columns>Baths__c</columns>
        <columns>Exp_Gross_Monthly_Rent_UW__c</columns>
        <columns>Gross_Yield_Est_UW__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bid_Type__c</field>
            <operation>equals</operation>
            <value>Trustee</value>
        </filters>
        <filters>
            <field>AZB_IH_Win_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Opportunity__c.AZ_Bidder</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <label>AZBIDDER MR Scrub</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_Atlanta</role>
            <role>Team_Member_Atlanta</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AZBIDDER_MV_Scrub1</fullName>
        <columns>NAME</columns>
        <columns>Residence__c</columns>
        <columns>Subdivision__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Property_County__c</columns>
        <columns>Bedrooms__c</columns>
        <columns>Baths__c</columns>
        <columns>Contract_Price__c</columns>
        <columns>Rehab_Budget_Est_UW__c</columns>
        <columns>All_In_Cost_Est_UW__c</columns>
        <columns>Previous_High_Value__c</columns>
        <columns>Previous_High_Date__c</columns>
        <columns>All_In_Cost_Assumption_prcnt_peak_UW__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bid_Type__c</field>
            <operation>equals</operation>
            <value>Trustee</value>
        </filters>
        <filters>
            <field>AZB_IH_Win_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Opportunity__c.AZ_Bidder</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <label>AZBIDDER PV Scrub</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_Atlanta</role>
            <role>Team_Member_Atlanta</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AZBIDDER_PV_Scrub</fullName>
        <columns>NAME</columns>
        <columns>Residence__c</columns>
        <columns>Subdivision__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_County__c</columns>
        <columns>Acquisition_Price_Discount_to_Max_Bid__c</columns>
        <columns>Contract_Price__c</columns>
        <columns>Max_Bid_Price__c</columns>
        <columns>AZB_Winning_Bid_Amount__c</columns>
        <columns>AZB_IH_Final_Max_Bid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bid_Type__c</field>
            <operation>equals</operation>
            <value>Trustee</value>
        </filters>
        <filters>
            <field>AZB_IH_Win_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Opportunity__c.AZ_Bidder</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <label>AZBIDDER MB v WB v CP Scrub</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_Atlanta</role>
            <role>Team_Member_Atlanta</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AZBIDDER_RHB_Contingency_Scrub</fullName>
        <columns>NAME</columns>
        <columns>Property_Street__c</columns>
        <columns>Stage__c</columns>
        <columns>Rehab_Budget_Est_UW__c</columns>
        <columns>Rehab_Pre_Contingency_Budget__c</columns>
        <columns>Rehab_Contingency_Amount__c</columns>
        <columns>Rehab_Contingency_Percent__c</columns>
        <columns>Broker_Expense_Est_UW__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bid_Type__c</field>
            <operation>equals</operation>
            <value>Trustee</value>
        </filters>
        <filters>
            <field>AZB_IH_Win_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Opportunity__c.AZ_Bidder</value>
        </filters>
        <label>AZBIDDER RHB Contingency Scrub</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_Atlanta</role>
            <role>Team_Member_Atlanta</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AZ_Bidder_APN_Issues</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Residence__c</columns>
        <columns>Prospect__c</columns>
        <columns>APN__c</columns>
        <columns>AZB_IH_Win_Date__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>AZB_Bid_Status__c</columns>
        <columns>Acquisition_Date__c</columns>
        <columns>AZB_Winning_Bid_Amount__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Opportunity__c.AZ_Bidder</value>
        </filters>
        <filters>
            <field>AZB_IH_Win_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>APN__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>APN__c</field>
            <operation>contains</operation>
            <value>E+,check,dup,dupe,not found</value>
        </filters>
        <label>AZBIDDER APN Issues</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AZ_Bidder_Acquired_Properties</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>AZB_Bid_Status__c</columns>
        <columns>Acquisition_Date__c</columns>
        <columns>AZB_Winning_Bid_Amount__c</columns>
        <columns>AZB_IH_Win_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Opportunity__c.AZ_Bidder</value>
        </filters>
        <filters>
            <field>AZB_IH_Win_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>AZ Bidder Acquired Properties</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>